# WebGPUEngine

./: Application.cpp  Application.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  main.cpp  webgpu-utils.cpp  webgpu-utils.h
resources/: pyramid.txt  shader.wgsl
